--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
 		<!-- Test -->
 		<junit.version>4.11</junit.version>
 
+		<!-- Checkstyle Plugins -->
+		<findbugs.version>2.5.2</findbugs.version>
+		<checkstyle.version>2.9.1</checkstyle.version>
+		<surefire.reportplugin.version>2.12.4</surefire.reportplugin.version>
+		<cobertura.version>2.5.2</cobertura.version>
+
 	</properties>
 	
 	<dependencies>
@@ -123,5 +129,58 @@
 	<version>2.4.2</version>
 </dependency>
 
-	</dependencies>	
+	</dependencies>
+
+	<!-- Checkstyle -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>${findbugs.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura.version}</version>
+				<configuration>
+					<formats>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>${findbugs.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>${checkstyle.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>${surefire.reportplugin.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura.version}</version>
+				<configuration>
+					<formats>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
+
+
 </project>
